...
                        }
                    }
                }
                Box(Modifier.padding(start = 20.dp)) {
                    Image(
                        painter = painterResource(R.drawable.ic_header_cart),
                        contentDescription = "Cart",
                        colorFilter = ColorFilter.tint(headerIcon),
                        modifier = Modifier
                            .size(24.dp)
                            .clickable(onClick = onCartClick),
                    )
                    if (cartCount > 0) {
...
